modules/aten_core/ops.h

/* extern "C" wrappers for ATen *operations* (at::add, at::reshape, ...).
 *
 * Split out from shim.h (the Tensor API) because this is the half that maps
 * one schema op -> one extern "C" wrapper and is intended to eventually be
 * autogenerated from native_functions.yaml (see lib/aten_gen). Each wrapper
 * trades only in the C ABI types from shim.h so it is callable via ctypes. */
#ifndef ATEN_CORE_OPS_H_
#define ATEN_CORE_OPS_H_

#include "shim.h" /* atc_tensor + C scalar/handle types */

#ifdef __cplusplus
extern "C" {
#endif

/* Elementwise a + b via the real ATen kernel (at::add); broadcasting and type
   promotion apply. Returns a fresh tensor. */
atc_tensor atc_add(atc_tensor a, atc_tensor b);

/* Elementwise a * b via the real ATen kernel (at::mul). Returns a fresh tensor. */
atc_tensor atc_mul(atc_tensor a, atc_tensor b);

/* Reshape [t] to [shape] (ndim entries) via at::reshape. In the ATen schema
   the shape is a SymInt[]; on this concrete-shape CPU path it is plain int64.
   Shares storage when possible. Returns a fresh handle. */
atc_tensor atc_reshape(atc_tensor t, const int64_t* shape, size_t ndim);

/* 2D average pooling (at::avg_pool2d) over a 4D NCHW (or 3D CHW) tensor with
   the given square-ish [kernel] (klen entries, typically 2). Stride defaults
   to the kernel size, padding 0. Returns a fresh tensor. */
atc_tensor atc_avg_pool2d(atc_tensor t, const int64_t* kernel, size_t klen);

#ifdef __cplusplus
}
#endif

#endif /* ATEN_CORE_OPS_H_ */