lib/aten/operation_description.ml

open Ctypes

(* ctypes bindings for the ATen *operations* (the extern "C" wrappers in
   ops.cpp). Separated from function_description.ml (the Tensor API) because
   this is the half intended to eventually be autogenerated from the schema
   (see lib/aten_gen): one schema op -> one [foreign] line. The opaque handle
   type is shared with the Tensor API so a tensor from [C.Functions.new_] can
   be passed straight into these ops. *)
let atc_tensor = Function_description.atc_tensor

(* dune's ctypes requires the functor module to be named [Functions]; the
   [(instance Operations)] stanza aliases it to [C.Operations]. *)
module Functions (F : Ctypes.FOREIGN) = struct
  open F

  let add =
    foreign "atc_add" (atc_tensor @-> atc_tensor @-> returning atc_tensor)

  let mul =
    foreign "atc_mul" (atc_tensor @-> atc_tensor @-> returning atc_tensor)

  let reshape =
    foreign "atc_reshape"
      (atc_tensor @-> ptr int64_t @-> size_t @-> returning atc_tensor)

  let avg_pool2d =
    foreign "atc_avg_pool2d"
      (atc_tensor @-> ptr int64_t @-> size_t @-> returning atc_tensor)
end
